# 2026__EspressoPro

./: README.md  pyproject.toml
espressopro/: __init__.py  annotation.py  constants.py  core.py  markers.py  missionbio.py  model_loading.py  prediction.py  protein_preprocessing.py
tutorials/: MissionBio_Tapestri.ipynb
