[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "espressopro"
version = "1.0.0"
authors = [{ name = "Kristian Gurashi", email = "kristian.gurashi@gmail.com" }]
description = "EspressoPro: An Automated Machine Learning Driven Protein Annotator For Tapestri Data"
readme = "README.md"
# Use SPDX license expression (no table, no classifier)
license = "CC-BY-4.0"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["single-cell", "cell-type-annotation", "protein", "cytometry", "bioinformatics"]

dependencies = [
  "numpy>=1.20.0",
  "pandas>=1.3.0",
  "scipy>=1.7.0",
  "scikit-learn>=1.0.0",
  "scanpy>=1.8.0",
  "anndata>=0.8.0",
  "joblib>=1.0.0",
  "matplotlib>=3.3.0",
  "seaborn>=0.11.0",
  "umap-learn>=0.5.0",
  "leidenalg>=0.8.0",
  "xgboost>=1.5.0",
  "kaleido",
  "itables",
  "chrov>=0.0.3",
  "venny4py",
  "gdown",
]

[project.optional-dependencies]
missionbio = []
dev = ["pytest>=6.0", "pytest-cov", "black", "flake8", "mypy", "notebook>=6.5.0", "ipykernel"]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser", "nbsphinx"]
all = [
  "pytest>=6.0", "pytest-cov", "black", "flake8", "mypy",
  "notebook>=6.5.0", "ipykernel",
  "sphinx", "sphinx-rtd-theme", "myst-parser", "nbsphinx",
]

[project.urls]
Homepage = "https://github.com/uom-eoh-lab-published/2026__EspressoPro"
Repository = "https://github.com/uom-eoh-lab-published/2026__EspressoPro"

[tool.setuptools]
include-package-data = true
packages = { find = { where = ["."], include = ["espressopro*"] } }

[tool.setuptools.package-data]
espressopro = ["data/**"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
